--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
   <modules>
     <module>dropwizard-extra-common</module>
     <module>dropwizard-extra-hbase</module>
+    <module>dropwizard-extra-kafka</module>
   </modules>
 
   <dependencies>
