Restructuring and re-implmentation of most things
  * The `-extra` has been dropped from the names of each concrete module
    to simplify things a little.
  * `dropwizard-hbase` now has a full wrapper for the asynchbase API,
    this facilitates many useful integrations and additional
    functionality including:

      * Support for `Semaphore` based constraint on concurrent requests
        awaiting completion. Useful for situations where the client
        write throughput might outstrip HBase and cause the client to
        eventually run out of memory by blocking new requests when there
        are too many still buffered.
      * Instrumentation with metrics, both general client metrics
        exposed by the asynchbase client, and timings for all requests.
      * Managed as part of the Dropwizard standard lifecycle.
      * `HBaseHealthCheck` for ensuring the META table can be contacted.

  * Temporary support for mix-in bundles until Dropwizard 0.4.1 is
    released.
  * Mix-in bundle for `GraphiteReporting`
  * `dropwizard-db` has an implicit wrapper and factory object for more
    idiomatic initialization.
  * `dropwizard-db` has a new `SimpleDatabaseConfiguration` config
    mix-in for services that use only a single database.

--- a/pom.xml
+++ b/pom.xml
@@ -61,9 +61,9 @@
 
   <modules>
     <module>dropwizard-extra-common</module>
-    <module>dropwizard-extra-hbase</module>
-    <module>dropwizard-extra-kafka</module>
-    <module>dropwizard-extra-db</module>
+    <module>dropwizard-hbase</module>
+    <module>dropwizard-kafka</module>
+    <module>dropwizard-db</module>
   </modules>
 
   <dependencies>
