--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>com.datasift.dropwizard</groupId>
   <artifactId>dropwizard-extra</artifactId>
-  <version>${dropwizard.version}-SNAPSHOT</version>
+  <version>${dropwizard.version}</version>
   <packaging>pom</packaging>
 
   <name>Dropwizard Extra</name>
