--- a/dropwizard-extra-common/pom.xml
+++ b/dropwizard-extra-common/pom.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project 
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+xmlns="http://maven.apache.org/POM/4.0.0"
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.datasift.dropwizard</groupId>
-    <artifactId>dropwizard-extra</artifactId>
-    <version>${dropwizard.version}</version>
+<modelVersion>4.0.0</modelVersion>
+<parent>
+  <groupId>com.datasift.dropwizard</groupId>
+  <artifactId>dropwizard-extra</artifactId>
+  <version>${dropwizard.version}-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
