--- a/dropwizard-db/pom.xml
+++ b/dropwizard-db/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>com.datasift.dropwizard</groupId>
     <artifactId>dropwizard-extra</artifactId>
-    <version>${dropwizard.version}-SNAPSHOT</version>
+    <version>0.4.1-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   
