--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>com.datasift.dropwizard</groupId>
   <artifactId>dropwizard-extra</artifactId>
-  <version>0.4.0</version>
+  <version>0.4.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Dropwizard Extra</name>
@@ -24,7 +24,7 @@
     <metrics.version>2.1.2</metrics.version>
     <jersey.version>1.12</jersey.version>
     <scala.version>2.9.1</scala.version>
-    <dropwizard.version>0.4.0</dropwizard.version>
+    <dropwizard.version>0.4.1</dropwizard.version>
   </properties>
 
   <organization>
