--- a/dropwizard-extra-hbase/pom.xml
+++ b/dropwizard-extra-hbase/pom.xml
@@ -8,15 +8,15 @@
   <parent>
     <groupId>com.datasift.dropwizard</groupId>
     <artifactId>dropwizard-extra</artifactId>
-    <version>0.5.0-SNAPSHOT</version>
+    <version>0.4.3</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   
-  <artifactId>dropwizard-db</artifactId>
+  <artifactId>dropwizard-extra-hbase</artifactId>
 
-  <name>Dropwizard Database</name>
+  <name>Dropwizard HBase</name>
   <description>
-    Improvements to the Scala API for dropwizard-db
+    Dropwizard integration for working with HBase in Scala.
   </description>
 
   <dependencies>
@@ -26,10 +26,26 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.yammer.dropwizard</groupId>
-      <artifactId>dropwizard-db</artifactId>
-      <version>${dropwizard.version}</version>
+      <groupId>org.hbase</groupId>
+      <artifactId>asynchbase</artifactId>
+      <version>1.3.1</version>
     </dependency>
   </dependencies>
+
+  <!-- manage the transitive deps from asynchbase -->
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty</artifactId>
+        <version>3.4.5.Final</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.zookeeper</groupId>
+        <artifactId>zookeeper</artifactId>
+        <version>3.3.4</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 </project>
 
