--- a/dropwizard-extra-kafka/pom.xml
+++ b/dropwizard-extra-kafka/pom.xml
@@ -8,11 +8,11 @@
   <parent>
     <groupId>com.datasift.dropwizard</groupId>
     <artifactId>dropwizard-extra</artifactId>
-    <version>0.5.0-SNAPSHOT</version>
+    <version>0.4.3</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   
-  <artifactId>dropwizard-kafka</artifactId>
+  <artifactId>dropwizard-extra-kafka</artifactId>
 
   <properties>
     <kafka.version>0.7.0</kafka.version>
