--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>com.datasift.dropwizard</groupId>
   <artifactId>dropwizard-extra</artifactId>
-  <version>0.5.0-SNAPSHOT</version>
+  <version>0.4.3</version>
   <packaging>pom</packaging>
 
   <name>Dropwizard Extra</name>
@@ -61,9 +61,9 @@
 
   <modules>
     <module>dropwizard-extra-common</module>
-    <module>dropwizard-hbase</module>
-    <module>dropwizard-kafka</module>
-    <module>dropwizard-db</module>
+    <module>dropwizard-extra-hbase</module>
+    <module>dropwizard-extra-kafka</module>
+    <module>dropwizard-extra-db</module>
   </modules>
 
   <dependencies>
