Changed additional modules to be written in Java
In order to work a little more like the rest of Dropwizard, the modules
are now written in Java.

There is a Scala module, which applies Scala idioms on top of the Java
API.

Currently, we're missing tests and more comprehensive documentation.

The Kafka module has been temporarily removed until it can be worked in
to an idiomatic module.

--- a/dropwizard-extra-hbase/pom.xml
+++ b/dropwizard-extra-hbase/pom.xml
@@ -14,7 +14,7 @@
   
   <artifactId>dropwizard-extra-hbase</artifactId>
 
-  <name>Dropwizard HBase</name>
+  <name>Dropwizard Extra HBase</name>
   <description>
     Dropwizard integration for working with HBase in Scala.
   </description>
@@ -22,7 +22,7 @@
   <dependencies>
     <dependency>
       <groupId>com.datasift.dropwizard</groupId>
-      <artifactId>dropwizard-extra-common</artifactId>
+      <artifactId>dropwizard-extra-core</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
