--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <metrics.version>2.1.2</metrics.version>
     <jersey.version>1.12</jersey.version>
-    <scala.version>2.9.1</scala.version>
     <dropwizard.version>0.4.3</dropwizard.version>
+    <scala.version>2.9.1</scala.version>
   </properties>
 
   <organization>
@@ -60,28 +60,16 @@
   </scm>
 
   <modules>
-    <module>dropwizard-extra-common</module>
+    <module>dropwizard-extra-core</module>
     <module>dropwizard-extra-hbase</module>
-    <module>dropwizard-extra-kafka</module>
-    <module>dropwizard-extra-db</module>
+    <module>dropwizard-extra-scala</module>
   </modules>
 
   <dependencies>
     <dependency>
-      <groupId>org.scala-lang</groupId>
-      <artifactId>scala-library</artifactId>
-      <version>${scala.version}</version>
-    </dependency>
-    <dependency>
       <groupId>com.yammer.dropwizard</groupId>
-      <artifactId>dropwizard-scala_${scala.version}</artifactId>
+      <artifactId>dropwizard-core</artifactId>
       <version>${dropwizard.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.specs2</groupId>
-      <artifactId>specs2_${scala.version}</artifactId>
-      <version>1.5</version>
-      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -91,54 +79,39 @@
     </dependency>
   </dependencies>
 
-  <repositories>
-    <repository>
-      <id>com.codahale</id>
-      <name>Coda Hale's Repository</name>
-      <url>http://repo.codahale.com/</url>
-    </repository>
-  </repositories>
-
   <build>
     <plugins>
       <plugin>
-        <groupId>net.alchim31.maven</groupId>
-        <artifactId>scala-maven-plugin</artifactId>
-        <version>3.0.1</version>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.1.2</version>
         <executions>
           <execution>
+            <id>attach-sources</id>
             <goals>
-              <goal>compile</goal>
-              <goal>testCompile</goal>
+              <goal>jar</goal>
             </goals>
           </execution>
         </executions>
       </plugin>
       <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.10</version>
-        <configuration>
-          <includes>
-            <include>**/*Spec.class</include>
-          </includes>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.10</version>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.8.1</version>
         <executions>
           <execution>
+            <id>attach-javadocs</id>
             <goals>
-              <goal>integration-test</goal>
-              <goal>verify</goal>
+              <goal>jar</goal>
             </goals>
           </execution>
         </executions>
-        <configuration>
-          <includes>
-            <include>**/*SpecIT.class</include>
-          </includes>
-        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-deploy-plugin</artifactId>
@@ -147,35 +120,32 @@
           <dependency>
             <groupId>org.apache.maven.wagon</groupId>
             <artifactId>wagon-ssh</artifactId>
-            <version>1.0-beta-6</version>
+            <version>2.2</version>
           </dependency>
         </dependencies>
       </plugin>
+      <plugin>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>3.0</version>
+        <configuration>
+          <reportPlugins>
+            <plugin>
+              <artifactId>maven-project-info-reports-plugin</artifactId>
+              <version>2.4</version>
+              <configuration>
+                <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
+                <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
+              </configuration>
+            </plugin>
+            <plugin>
+              <artifactId>maven-javadoc-plugin</artifactId>
+              <version>2.8.1</version>
+            </plugin>
+          </reportPlugins>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
-
-  <reporting>
-    <plugins>
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.10</version>
-        <configuration>
-          <includes>
-            <include>**/*Spec.class</include>
-          </includes>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.10</version>
-        <configuration>
-          <includes>
-            <include>**/*SpecIT.class</include>
-          </includes>
-        </configuration>
-      </plugin>
-    </plugins>
-  </reporting>
 
 </project>
 
