Update dropwizard-extra-kafka and misc docs
Includes Kafka support in dropwizard-extra-scala.

--- a/dropwizard-extra-scala/pom.xml
+++ b/dropwizard-extra-scala/pom.xml
@@ -43,6 +43,12 @@
       <version>${dropwizard.version}</version>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>com.datasift.dropwizard</groupId>
+      <artifactId>dropwizard-extra-kafka</artifactId>
+      <version>${dropwizard.version}</version>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
   <build>
