Fixed up project versioning
Project is now versioned independently of upstream Dropwizard, although
the major version components still track it.

A few slight errors, including the accidental override of
`dropwizard.version` in the archetypes, and incorrect version for sister
dependencies of `dropwizard-extra-scala` have also been resolved.

--- a/dropwizard-extra-archetypes/scala-simple/pom.xml
+++ b/dropwizard-extra-archetypes/scala-simple/pom.xml
@@ -8,13 +8,9 @@
   <parent>
     <groupId>com.datasift.dropwizard.archetypes</groupId>
     <artifactId>dropwizard-extra-archetypes</artifactId>
-    <version>0.4.3</version>
+    <version>0.4.3-1-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
-
-  <properties>
-    <dropwizard.version>${project.version}</dropwizard.version>
-  </properties>
 
   <groupId>com.datasift.dropwizard.archetypes</groupId>
   <artifactId>scala-simple</artifactId>
