--- a/dropwizard-extra-archetypes/pom.xml
+++ b/dropwizard-extra-archetypes/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>com.datasift.dropwizard</groupId>
     <artifactId>dropwizard-extra</artifactId>
-    <version>0.4.3</version>
+    <version>0.4.3-1-SNAPSHOT</version>
   </parent>
 
   <groupId>com.datasift.dropwizard.archetypes</groupId>
