Add JUnit tests to dropwizard-extra-scala POM
The `dropwizard-extra-scala` POM was omitting JUnit style tests from its
build process. This commit includes them.

--- a/dropwizard-extra-scala/pom.xml
+++ b/dropwizard-extra-scala/pom.xml
@@ -84,6 +84,7 @@
         <configuration>
           <includes>
             <include>**/*Spec.class</include>
+            <include>**/*Test.class</include>
           </includes>
         </configuration>
       </plugin>
@@ -101,6 +102,7 @@
         <configuration>
           <includes>
             <include>**/*SpecIT.class</include>
+            <include>**/*TestIT.class</include>
           </includes>
         </configuration>
       </plugin>
