Fix artifactId for dropwizard-extra-scala
We cannot use properties in the `<artifactId>` of a POM, so we need to
hard-code the Scala version we're compiling against and remember to
update it when we change it.

With the improved binary compatibility of 2.9.x and 2.10.x, this
shouldn't cause anywhere near as much trouble as it would have before
2.9.x.

--- a/dropwizard-extra-scala/pom.xml
+++ b/dropwizard-extra-scala/pom.xml
@@ -12,7 +12,7 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
   
-  <artifactId>dropwizard-extra-scala_${scala.version}</artifactId>
+  <artifactId>dropwizard-extra-scala_2.9.1</artifactId>
 
   <name>Dropwizard Extra Scala ${scala.version}</name>
   <description>
