--- a/dropwizard-extra-hbase/pom.xml
+++ b/dropwizard-extra-hbase/pom.xml
@@ -14,6 +14,10 @@
   
   <artifactId>dropwizard-extra-hbase</artifactId>
 
+  <properties>
+    <powermock.version>1.4.12</powermock.version>
+  </properties>
+
   <name>Dropwizard Extra HBase</name>
   <description>
     Dropwizard integration for working with HBase in Scala.
@@ -29,6 +33,18 @@
       <groupId>org.hbase</groupId>
       <artifactId>asynchbase</artifactId>
       <version>1.3.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-module-junit4</artifactId>
+      <version>${powermock.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-api-mockito</artifactId>
+      <version>${powermock.version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
