--- a/dropwizard-extra-core/pom.xml
+++ b/dropwizard-extra-core/pom.xml
@@ -21,6 +21,10 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.yammer.dropwizard</groupId>
+      <artifactId>dropwizard-core</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.yammer.metrics</groupId>
       <artifactId>metrics-graphite</artifactId>
       <version>${metrics.version}</version>
