Add Scala sources to source JAR
In order to meet the requirements for Maven central, all modules must
provide a source JAR.

--- a/dropwizard-extra-scala/pom.xml
+++ b/dropwizard-extra-scala/pom.xml
@@ -119,6 +119,15 @@
           </reportPlugins>
         </configuration>
       </plugin>
+      <plugin>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.1.2</version>
+        <configuration>
+          <includes>
+            <include>**/*.scala</include>
+          </includes>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
