Add GitHub Pages URL to POMs
The master site for the project and its sub-modules will be hosted as a
GitHub Pages site at: `http://datasift.github.com/dropwizard-extra`

--- a/dropwizard-extra-core/pom.xml
+++ b/dropwizard-extra-core/pom.xml
@@ -15,6 +15,7 @@
   <artifactId>dropwizard-extra-core</artifactId>
 
   <name>Dropwizard Extra Core</name>
+  <url>http://datasift.github.com/dropwizard-extra/dropwizard-extra-core</url>
   <description>
     Some useful additions to Dropwizard that have no external dependencies.
   </description>
