Fix Scala module name
We can't use properties in the `project.name` without things breaking.

--- a/dropwizard-extra-scala/pom.xml
+++ b/dropwizard-extra-scala/pom.xml
@@ -14,7 +14,7 @@
   
   <artifactId>dropwizard-extra-scala</artifactId>
 
-  <name>Dropwizard Extra Scala ${scala.version}</name>
+  <name>Dropwizard Extra Scala</name>
   <description>
     Improvements to the Scala API for various Dropwizard modules.
   </description>
