Link Javadoc to external sources
Links the following Javadoc sources to the generated Javadoc:

  * [Dropwizard](http://dropwizard.codahale.com/)
  * [Metrics](http://metrics.codahale.com/)
  * HBase's [asynchbase](http://github.com/stumbleupon/asynchbase)
  * StumbleUpon's [Async](http://github.com/stumbleupon/async) library

--- a/dropwizard-extra-hbase/pom.xml
+++ b/dropwizard-extra-hbase/pom.xml
@@ -48,5 +48,19 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+
+  <reporting>
+    <plugins>
+      <plugin>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <configuration>
+          <links combine.children="append">
+            <link>http://tsunanet.net/~tsuna/async/api/</link>
+            <link>http://tsunanet.net/~tsuna/asynchbase/api/</link>
+          </links>
+        </configuration>
+      </plugin>
+    </plugins>
+  </reporting>
 </project>
 
