--- a/pom.xml
+++ b/pom.xml
@@ -196,12 +196,19 @@
         </executions>
       </plugin>
       <plugin>
-        <artifactId>maven-javadoc-plugin</artifactId>
+        <artifactId>maven-site-plugin</artifactId>
+        <dependencies>
+          <dependency>
+            <groupId>org.apache.maven.doxia</groupId>
+            <artifactId>doxia-module-markdown</artifactId>
+            <version>1.3</version>
+          </dependency>
+        </dependencies>
         <executions>
           <execution>
-            <id>attach-javadocs</id>
+            <id>attach-descriptor</id>
             <goals>
-              <goal>jar</goal>
+              <goal>attach-descriptor</goal>
             </goals>
           </execution>
         </executions>
