--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,14 @@
     <url>https://github.com/datasift/dropwizard-extra</url>
   </scm>
 
+  <distributionManagement>
+    <site>
+      <id>github</id>
+      <name>GitHub Pages Site</name>
+      <url>http://datasift.github.com/dropwizard-extra</url>
+    </site>
+  </distributionManagement>
+
   <modules>
     <module>dropwizard-extra-core</module>
     <module>dropwizard-extra-hbase</module>
@@ -185,13 +193,17 @@
         </configuration>
       </plugin>
       <plugin>
-        <artifactId>maven-source-plugin</artifactId>
+        <groupId>com.github.github</groupId>
+        <artifactId>site-maven-plugin</artifactId>
+        <configuration>
+          <message>Create site for ${project.version}</message>
+        </configuration>
         <executions>
           <execution>
-            <id>attach-sources</id>
             <goals>
-              <goal>jar</goal>
+              <goal>site</goal>
             </goals>
+            <phase>site-deploy</phase>
           </execution>
         </executions>
       </plugin>
