Add Sonatype OSS parent for publishing to Central
The Sonatype OSS parent POM handles releases using the
`maven-release-plugin`, providing a release profile:
`sonatype-oss-release`, which (by default):

  * Attaches source JAR (using the `maven-source-plugin`)
  * Attaches docs JAR (using the `maven-javadoc-plugin`)
  * Signs artifacts using GPG key (using the `maven-gpg-plugin`)

The `dropwizard-extra-scala` module explicitly overrides the profile to
add it's sources to the `maven-source-plugin` and produce an attached
docs JAR.

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,12 @@
     <maven>3.0.0</maven>
   </prerequisites>
 
+  <parent>
+    <groupId>org.sonatype.oss</groupId>
+    <artifactId>oss-parent</artifactId>
+    <version>7</version>
+  </parent>
+
   <groupId>com.datasift.dropwizard</groupId>
   <artifactId>dropwizard-extra</artifactId>
   <version>0.5.1-1-SNAPSHOT</version>
@@ -145,6 +151,9 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <!-- javadoc, source, release, deploy and gpg plugins all configured by
+       Sonatype OSS parent POM -->
 
   <build>
     <pluginManagement>
