--- a/dropwizard-extra-scala/pom.xml
+++ b/dropwizard-extra-scala/pom.xml
@@ -74,8 +74,6 @@
             <goals>
               <goal>compile</goal>
               <goal>testCompile</goal>
-              <goal>doc</goal>
-              <goal>doc-jar</goal>
             </goals>
           </execution>
         </executions>
@@ -116,6 +114,36 @@
         <artifactId>scala-maven-plugin</artifactId>
       </plugin>
     </plugins>
-  </build>
+  </reporting>
+
+  <profiles>
+    <profile>
+      <id>sonatype-oss-release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>net.alchim31.maven</groupId>
+            <artifactId>scala-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>doc</goal>
+                  <goal>doc-jar</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <artifactId>maven-source-plugin</artifactId>
+            <configuration>
+              <includes>
+                <include>**/*.scala</include>
+              </includes>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
 
