--- a/pom.xml
+++ b/pom.xml
@@ -256,6 +256,14 @@
             <link>http://metrics.codahale.com/maven/apidocs/</link>
           </links>
         </configuration>
+        <reportSets>
+          <reportSet>
+            <id>default</id>
+            <reports>
+              <report>javadoc</report>
+            </reports>
+          </reportSet>
+        </reportSets>
       </plugin>
     </plugins>
   </reporting>
