Add outputEncoding to POM
Everything should be UTF-8 for portability.

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.build.outputEncoding>UTF-8</project.build.outputEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <metrics.version>2.1.2</metrics.version>
     <jersey.version>1.12</jersey.version>
