Work-around bug in dependency info report
The new "dependency info" report defines a broken default for the
dependency packaging, so lets override it to a sensible default.

--- a/pom.xml
+++ b/pom.xml
@@ -234,6 +234,7 @@
         <configuration>
           <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
           <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
+          <packaging>${project.packaging}</packaging>
         </configuration>
       </plugin>
       <plugin>
