--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,11 @@
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>2.8.1</version>
+          <!-- workaround for MJAVADOC-284
+               (until parent upgrades to javadoc 2.8+)-->
+          <configuration>
+            <detectOfflineLinks>false</detectOfflineLinks>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-source-plugin</artifactId>
@@ -234,6 +239,7 @@
         <configuration>
           <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
           <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
+          <!-- workaround for broken default in dependency info report -->
           <packaging>${project.packaging}</packaging>
         </configuration>
       </plugin>
