Enable incremental compilation of Scala sources
Using Zinc, supported in `scala-maven-plugin` 3.1.0, we can compile
Scala sources incrementally, improving overall build times.

--- a/dropwizard-extra-scala/pom.xml
+++ b/dropwizard-extra-scala/pom.xml
@@ -65,6 +65,7 @@
         <artifactId>scala-maven-plugin</artifactId>
         <configuration>
           <charset>UTF-8</charset>
+          <recompileMode>incremental</recompileMode>
         </configuration>
         <executions>
           <execution>
