--- a/pom.xml
+++ b/pom.xml
@@ -80,9 +80,11 @@
 
   <modules>
     <module>dropwizard-extra-core</module>
+    <module>dropwizard-extra-curator</module>
     <module>dropwizard-extra-hbase</module>
     <module>dropwizard-extra-kafka</module>
     <module>dropwizard-extra-scala</module>
+    <module>dropwizard-extra-zookeeper</module>
   </modules>
 
   <dependencyManagement>
