--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <metrics.version>2.1.2</metrics.version>
     <jersey.version>1.12</jersey.version>
-    <dropwizard.version>0.6.0-SNAPSHOT</dropwizard.version>
+    <dropwizard.version>0.6.0</dropwizard.version>
     <scala.version>2.9.1</scala.version>
   </properties>
 
