Dropwizard Extra ZooKeeper
Added a new module that introduces ZooKeeper integration in Dropwizard.

--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,7 @@
     <module>dropwizard-extra-hbase</module>
     <module>dropwizard-extra-kafka</module>
     <module>dropwizard-extra-scala</module>
+    <module>dropwizard-extra-zookeeper</module>
   </modules>
 
   <dependencyManagement>
