Integrate Curator with dw-extra-zookeeper
All `ZooKeeper` instances that Curator creates are now created via the
`ZooKeeperFactory` included in `dropwizard-extra-zookeeper`. This allows
Curator to automatically benefit from improvements to
`ZooKeeperFactory`.

--- a/dropwizard-extra-curator/pom.xml
+++ b/dropwizard-extra-curator/pom.xml
@@ -32,6 +32,13 @@
       <groupId>com.netflix.curator</groupId>
       <artifactId>curator-framework</artifactId>
       <version>1.2.4</version>
+        <exclusions>
+            <!-- use version from dropwizard-core -->
+            <exclusion>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+            </exclusion>
+        </exclusions>
     </dependency>
   </dependencies>
 
