Round out Curator/ZooKeeper integration
Adds configuration options to Curator for:

    * Exponential back-off (replaces customisable retryPolicy)
    * Compression codec

Adds configuration options to ZooKeeper for:

    * Authorization details

--- a/dropwizard-extra-curator/src/test/resources/yaml/curator.yaml
+++ b/dropwizard-extra-curator/src/test/resources/yaml/curator.yaml
@@ -4,4 +4,5 @@ ensemble:
     - test2
   port: 2182
   sessionTimeout: 30 seconds
-retryPolicy: backoff upto 5 times sleeping for 10 seconds
+maxRetries: 5
+backOffBaseTime: 2 seconds
