--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <metrics.version>2.1.2</metrics.version>
     <jersey.version>1.12</jersey.version>
-    <dropwizard.version>0.6.1</dropwizard.version>
+    <dropwizard.version>0.6.2-SNAPSHOT</dropwizard.version>
     <scala.version>2.9.1</scala.version>
   </properties>
 
@@ -102,6 +102,7 @@
   <modules>
     <module>dropwizard-extra-core</module>
     <module>dropwizard-extra-curator</module>
+    <module>dropwizard-extra-gelf</module>
     <module>dropwizard-extra-hbase</module>
     <module>dropwizard-extra-kafka</module>
     <module>dropwizard-extra-scala</module>
