Added base support for HDFS in Dropwizard.
This is a foundation for HDFS support in Dropwizard, there are no Unit or integration tests written for this yet.   It is uncomplete, but should enable a solution to be implemented fairly quickly.

--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,7 @@
     <module>dropwizard-extra-kafka</module>
     <module>dropwizard-extra-scala</module>
     <module>dropwizard-extra-zookeeper</module>
+      <module>dropwizard-extra-hdfs</module>
   </modules>
 
   <dependencyManagement>
