--- a/dropwizard-extra-scala/pom.xml
+++ b/dropwizard-extra-scala/pom.xml
@@ -36,6 +36,12 @@
       <artifactId>dropwizard-core</artifactId>
       <version>${dropwizard.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.module</groupId>
+      <artifactId>jackson-module-scala_${scala.version}</artifactId>
+      <!-- Can't use version of jackson-core from upstream as they're released separately -->
+      <version>2.1.3</version>
+    </dependency>
 
     <!-- Optional Dependencies (for per-module Scala support) -->
     <dependency>
