--- a/dropwizard-extra-gelf/pom.xml
+++ b/dropwizard-extra-gelf/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.datasift.dropwizard</groupId>
     <artifactId>dropwizard-extra</artifactId>
-    <version>0.6.2-1-SNAPSHOT</version>
+    <version>0.7.0-1-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   
@@ -21,12 +21,7 @@
     <dependency>
       <groupId>com.yammer.dropwizard</groupId>
       <artifactId>dropwizard-core</artifactId>
-      <version>0.6.2-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>me.moocar</groupId>
-      <artifactId>logback-gelf</artifactId>
-      <version>0.9.6p2</version>
+      <version>${dropwizard.version}</version>
     </dependency>
   </dependencies>
 </project>
