Add Coda Hale to contributors list
For contributing the upstream dropwizard-scala module.

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,10 @@
       <name>David Morgantini</name>
       <url>https://github.com/dmorgantini</url>
     </contributor>
+    <contributor>
+      <name>Coda Hale</name>
+      <url>http://codahale.com</url>
+    </contributor>
   </contributors>
 
   <licenses>
