Switch to com.codahale namespace and metrics 3.0.0
0.7.0 and metrics 3.0.0 are both under the `com.codahale` namespace, not
com.yammer.

--- a/dropwizard-extra-core/pom.xml
+++ b/dropwizard-extra-core/pom.xml
@@ -19,11 +19,11 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.yammer.dropwizard</groupId>
+      <groupId>com.codahale.dropwizard</groupId>
       <artifactId>dropwizard-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.yammer.metrics</groupId>
+      <groupId>com.codahale.metrics</groupId>
       <artifactId>metrics-graphite</artifactId>
       <version>${metrics.version}</version>
       <optional>true</optional>
