--- a/dropwizard-extra-scala/pom.xml
+++ b/dropwizard-extra-scala/pom.xml
@@ -19,7 +19,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.yammer.dropwizard</groupId>
+      <groupId>com.codahale.dropwizard</groupId>
       <artifactId>dropwizard-core</artifactId>
       <version>${dropwizard.version}</version>
     </dependency>
@@ -30,13 +30,13 @@
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>com.yammer.dropwizard</groupId>
+      <groupId>com.codahale.dropwizard</groupId>
       <artifactId>dropwizard-db</artifactId>
       <version>${dropwizard.version}</version>
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>com.yammer.dropwizard</groupId>
+      <groupId>com.codahale.dropwizard</groupId>
       <artifactId>dropwizard-jdbi</artifactId>
       <version>${dropwizard.version}</version>
       <optional>true</optional>
@@ -52,6 +52,12 @@
       <artifactId>dropwizard-extra-kafka</artifactId>
       <version>${project.version}</version>
       <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>com.codahale.dropwizard</groupId>
+      <artifactId>dropwizard-testing</artifactId>
+      <version>${dropwizard.version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
