Remove dependencies on dw-extra-core
None of the existing module depend on `dropwizard-extra-core`, so we
should remove those dependencies and rename it `dropwizard-extra-util`
to reflect its purpose as a utilities module.

--- a/dropwizard-extra-curator/pom.xml
+++ b/dropwizard-extra-curator/pom.xml
@@ -19,9 +19,8 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.datasift.dropwizard</groupId>
-      <artifactId>dropwizard-extra-core</artifactId>
-      <version>${project.version}</version>
+      <groupId>com.codahale.dropwizard</groupId>
+      <artifactId>dropwizard-core</artifactId>
     </dependency>
     <dependency>
       <groupId>com.datasift.dropwizard</groupId>
