--- a/dropwizard-extra-hbase/pom.xml
+++ b/dropwizard-extra-hbase/pom.xml
@@ -19,9 +19,8 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.datasift.dropwizard</groupId>
-      <artifactId>dropwizard-extra-core</artifactId>
-      <version>${project.version}</version>
+      <groupId>com.codahale.dropwizard</groupId>
+      <artifactId>dropwizard-core</artifactId>
     </dependency>
     <dependency>
       <groupId>com.datasift.dropwizard</groupId>
